# la3dm

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
config/datasets/: sim_structured.yaml  sim_structured_long_term.yaml  sim_unstructured.yaml
config/methods/: bgkloctomap.yaml  bgkloctomap_large_map.yaml  bgklvoctomap.yaml  bgklvoctomap_large_map.yaml  bgkoctomap.yaml  bgkoctomap_large_map.yaml  gpoctomap.yaml  gpoctomap_large_map.yaml  octomap.yaml
data/sim_structured/: map.bt  sim_structured.bag  sim_structured_10.pcd  sim_structured_11.pcd  sim_structured_12.pcd  sim_structured_2.pcd  sim_structured_3.pcd  sim_structured_4.pcd  sim_structured_5.pcd  sim_structured_6.pcd  sim_structured_7.pcd  sim_structured_8.pcd  sim_structured_9.pcd  sim_structured_bgkloctomap.csv  sim_structured_octomap.csv
data/sim_structured_long_term/: sim_structured_long_term_1.pcd
data/sim_unstructured/: map.bt  sim_unstructured.bag  sim_unstructured_1.pcd  sim_unstructured_10.pcd  sim_unstructured_11.pcd  sim_unstructured_12.pcd  sim_unstructured_2.pcd  sim_unstructured_3.pcd  sim_unstructured_4.pcd  sim_unstructured_5.pcd  sim_unstructured_6.pcd  sim_unstructured_7.pcd  sim_unstructured_8.pcd  sim_unstructured_9.pcd  sim_unstructured_h.bag
include/: bgkinference.h  bgkoctomap.h  bgkoctree.h  bgkoctree_node.h  block.h  gpoctree_node.h  octree.h  octree_node.h  rtree.h
include/bgkloctomap/: bgklblock.h  bgklinference.h  bgkloctomap.h  bgkloctree.h  bgkloctree_node.h
include/bgklvoctomap/: bgklvblock.h  bgklvinference.h  bgklvoctomap.h  bgklvoctree.h  bgklvoctree_node.h
include/bgkoctomap/: bgkblock.h  bgkoctomap.h
include/common/: markerarray_pub.h  point3f.h  point6f.h
include/gpoctomap/: gpblock.h  gpoctomap.h  gpoctree.h  gpoctree_node.h  gpregressor.h
launch/: la3dm_server.launch  la3dm_static.launch
rviz/: sim_structured.rviz  sim_structured_long_term.rviz  sim_unstructured.rviz
src/: bgkblock.cpp  bgkoctomap.cpp  bgkoctomap_static_node.cpp  bgkoctree_node.cpp  block.cpp  gpblock.cpp  gpoctomap_static_node.cpp  gpoctree.cpp  octomap_static_node.cpp  octree.cpp  octree_node.cpp  point3f.cpp
src/bgkloctomap/: bgklblock.cpp  bgkloctomap.cpp  bgkloctomap_server.cpp  bgkloctomap_static_node.cpp  bgkloctree.cpp  bgkloctree_node.cpp  test.cpp
src/bgklvoctomap/: bgklvblock.cpp  bgklvoctomap.cpp  bgklvoctomap_server.cpp  bgklvoctomap_static_node.cpp  bgklvoctree.cpp  bgklvoctree_node.cpp
src/bgkoctomap/: bgkoctomap.cpp  bgkoctomap_server.cpp  bgkoctomap_static_node.cpp  bgkoctree.cpp
src/common/: point6f.cpp
src/gpoctomap/: gpoctomap.cpp  gpoctomap_server.cpp  gpoctomap_static_node.cpp  gpoctree_node.cpp
src/octomap/: octomap_static_node.cpp
